# ghcid-issue320

./: .ghc.environment.x86_64-linux-8.10.1  .ghci  Test.hs  aaaa.cabal
internal/: Numeric.hs
src/: Unsafe.hs
