cabal-version: 2.2

name:           aaaa
version:        0.3.0
synopsis:       A
description:    A
build-type:     Simple

library aaaa-internal
  exposed-modules:
    Numeric
  hs-source-dirs:
    internal
  build-depends:
      base
  default-language: Haskell2010
  mixins:
    base hiding (Numeric)

library
  exposed-modules:
    Unsafe
  hs-source-dirs:
    src
  build-depends:
      base
    , aaaa-internal
    , time
  default-language: Haskell2010
  mixins:
    base hiding (Numeric)

test-suite aaaa-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends: base, aaaa, aaaa-internal
  default-language: Haskell2010
  mixins:
    base hiding (Numeric)
